--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,10 @@ button {
     }
 }
 
+.action-btn svg {
+    cursor: pointer;
+}
+
 .section-items {
     border: 1px solid #444;
     border-radius: 4px;
@@ -104,4 +108,12 @@ button {
     margin-top: 20px;
     margin-bottom: 100px;
     display: flex;
+}
+
+.item-image {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    background: #fff;
+    cursor: grab;
 }
